syntax = "proto3";
package vote.exported.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/vote/exported";

import "gogoproto/gogo.proto";

// PollKey represents the key data for a poll
message PollKey {
  option (gogoproto.goproto_stringer) = false;

  string module = 1;
  string id = 2 [ (gogoproto.customname) = "ID" ];
}
